@@ -5,6 +5,7 @@ import lombok.AllArgsConstructor;
 import nl.fontys.sioux.siouxbackend.business.exception.InvalidAppointmentException;
 import nl.fontys.sioux.siouxbackend.business.exception.InvalidEmployeeException;
 import nl.fontys.sioux.siouxbackend.business.interf.appointment.CreateAppointmentUseCase;
+import nl.fontys.sioux.siouxbackend.business.interf.appointment.SendAppointmentEmailUseCase;
 import nl.fontys.sioux.siouxbackend.domain.request.appointment.CreateAppointmentRequest;
 import nl.fontys.sioux.siouxbackend.domain.response.appointment.CreateAppointmentResponse;
 import nl.fontys.sioux.siouxbackend.repository.AppointmentRepository;
@@ -13,15 +14,17 @@ import nl.fontys.sioux.siouxbackend.repository.entity.AppointmentEntity;
 import nl.fontys.sioux.siouxbackend.repository.entity.EmployeeEntity;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 public class CreateAppointmentUseCaseImpl implements CreateAppointmentUseCase {
     private final AppointmentRepository appointmentRepository;
     private final EmployeeRepository employeeRepository;
+    private final SendAppointmentEmailUseCase sendAppointmentEmailUseCase;
 
     @Transactional
     @Override
@@ -40,11 +43,15 @@ public class CreateAppointmentUseCaseImpl implements CreateAppointmentUseCase {
         if(request.getStartTime().getTime() >= request.getEndTime().getTime()){
             throw new InvalidAppointmentException("INVALID_TIME");
         }
+        if(appointmentRepository.existsAppointmentForEmployeesInTimeRange(request.getEmployeeIDs(), request.getStartTime(), request.getEndTime())) {
+            throw new InvalidAppointmentException("EMPLOYEE_TIMESLOT_ALREADY_TAKEN");
+        }
 
         List<EmployeeEntity> employees = request.getEmployeeIDs()
                 .stream()
-                .map(employeeRepository::getReferenceById)
-                .toList();
+                .map(employeeRepository::findById)
+                .flatMap(Optional::stream)
+                .collect(Collectors.toList());
 
         AppointmentEntity appointment = AppointmentEntity.builder()
                 .clientName(request.getClientName())
@@ -59,8 +66,86 @@ public class CreateAppointmentUseCaseImpl implements CreateAppointmentUseCase {
                 .build();
 
         AppointmentEntity savedAppointment = appointmentRepository.save(appointment);
+
+        sendClientEmail(savedAppointment);
+        sendEmployeesEmail(savedAppointment);
+
+
         return CreateAppointmentResponse.builder()
                 .appointmentID(savedAppointment.getId())
                 .build();
+    }
+
+    private List<String> getEmployeeEmails(List<EmployeeEntity> employeeEntities){
+        List<String> emails = new ArrayList<>();
+
+        for(EmployeeEntity emp: employeeEntities){
+            emails.add(emp.getEmail());
+        }
+
+        return emails;
+    }
+
+    private void sendClientEmail(AppointmentEntity appointment){
+        String subject = "Sioux Appointment Created!";
+        StringBuilder employeesList = new StringBuilder();
+        for (EmployeeEntity employee : appointment.getEmployees()) {
+            employeesList.append("<li>").append(employee.getFirstName()).append(" ").append(employee.getLastName()).append("</li>");
+        }
+
+        String htmlTemplate = """
+                <html>
+                    <body>
+                        <h1>Appointment Confirmation</h1>
+                        <p>Dear %s, your appointment has been scheduled.</p>
+                                
+                        <h3>Appointment Details</h3>
+                        <p>Attendees: </p>
+                        <ul>
+                            %s
+                        </ul>
+                        <p>Start Time: %s</p>
+                        <p>End Time: %s</p>
+                        <p>Location: %s</p>
+                        <p>Description: %s</p>
+                    </body>
+                </html>
+                """;
+
+        String emailBody = String.format(htmlTemplate, appointment.getClientName(), employeesList, appointment.getStartTime().toString(), appointment.getEndTime().toString(), appointment.getLocation(), appointment.getDescription());
+
+        sendAppointmentEmailUseCase.sendAppointmentConfirmation(List.of(appointment.getClientEmail()), subject, emailBody);
+    }
+
+    private void sendEmployeesEmail(AppointmentEntity appointment){
+        List<String> emails = getEmployeeEmails(appointment.getEmployees());
+        String subject = "Appointment With Client Created!";
+        StringBuilder employeesList = new StringBuilder();
+        for (EmployeeEntity employee : appointment.getEmployees()) {
+            employeesList.append("<li>").append(employee.getFirstName()).append(" ").append(employee.getLastName()).append("</li>");
+        }
+
+        String htmlTemplate = """
+                <html>
+                    <body>
+                        <h1>Appointment Confirmation</h1>
+                        <p>Dear Employee, your appointment has been scheduled.</p>
+                                
+                        <h3>Appointment Details</h3>
+                        <p>Client: %s</p>
+                        <p>Attendees: </p>
+                        <ul>
+                            %s
+                        </ul>
+                        <p>Start Time: %s</p>
+                        <p>End Time: %s</p>
+                        <p>Location: %s</p>
+                        <p>Description: %s</p>
+                    </body>
+                </html>
+                """;
+
+        String emailBody = String.format(htmlTemplate, appointment.getClientName(), employeesList, appointment.getStartTime().toString(), appointment.getEndTime().toString(), appointment.getLocation(), appointment.getDescription());
+        sendAppointmentEmailUseCase.sendAppointmentConfirmation(emails, subject, emailBody);
     }
 }
